# auto_exposure

ros_packages/automatic_exposure/: CMakeLists.txt  package.xml  plugins.xml
ros_packages/automatic_exposure/config/: default.yaml  dynparam.cfg
ros_packages/automatic_exposure/launch/: automatic_exposure.launch
ros_packages/automatic_exposure/msg/: Num.msg
ros_packages/automatic_exposure/src/: ExposureControl.cpp
ros_packages/automatic_exposure/srv/: SetNewGain.srv
ros_packages/exposure_simulation/: CMakeLists.txt  package.xml  plugins.xml
ros_packages/exposure_simulation/config/: dynparam.cfg
ros_packages/exposure_simulation/launch/: exposure_simulation.launch
ros_packages/exposure_simulation/msg/: Num.msg
ros_packages/exposure_simulation/src/: .ExposureControl.cpp.swp  APexposure_simulation.py  ExposureControl.cpp
ros_packages/exposure_simulation/srv/: SetNewGain.srv
ros_packages/rs_camera_work/: CMakeLists.txt  package.xml  setup.py
ros_packages/rs_camera_work/src/: APexposure_simulation.py  callback_logic_example.py  new_try.py  wait_for_mess_new.py
tmux_scripts/automatic_exposure/: .tmuxinator.yml  layout.json  temp_file
tmux_scripts/exposure_simulation/: layout.json  session.yml
