<?xml version="1.0"?>
<package format="2">
  <name>automatic_exposure</name>
  <version>1.0.0</version>
  <description>The automatic_exposure package</description>

  <maintainer email="ivddorrka@gmail.com">ivddorrka</maintainer>
  <license>MIT</license>


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  
   <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>mrs_lib</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>

